feat(nlp): implement academic document intelligence pipeline and study planner integration